nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app

  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginxapp
          image: flasknginxserver:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 80
