nginx/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-lb-service

spec:
  type: LoadBalancer

  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-app
